@@ -8,6 +8,8 @@ cdebconf (0.85) UNRELEASED; urgency=low
     questions at high priority. This is just a hack; Attilio needs to
     investigate the right solution. Reducing the amount of hardcoding of
     main-menu would be nice ...
+  * Don't bother to save the target templatedb in debconf-copydb unless any
+    templates were actually changed.
 
   [ Tollef Fog Heen ]
   * When copying questions in debconf-copydb, make sure that the template
